# ChangeLog for sci-geosciences/josm
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-geosciences/josm/ChangeLog,v 1.5 2007/11/07 15:37:37 hanno Exp $

*josm-1.5_p486 (14 Dec 2007)

  14 Dec 2007; Lorenz Kiefner <openstreetmap-at-lorenz.kiefner.de> +josm-1.5_p486.ebuild:
  Version bump, marked stable for x86 and amd64

  14 Dec 2007; Lorenz Kiefner <openstreetmap-at-lorenz.kiefner.de> -josm-1.5_p484.ebuild


*josm-9999 (09 Dec 2007)

  09 Dec 2007; Dennis <dennis.lists@googlemail.com> +josm-9999.ebuild:
  Created SVN-version, ~x86 and amd64

*josm-1.5_p484 (09 Dec 2007)

  09 Dec 2007; Lorenz Kiefner <openstreetmap-at-lorenz.kiefner.de> +josm-1.5_p484.ebuild:
  Version bump, marked stable for x86 and amd64

*josm-1.5_p457 (07 Nov 2007)

  07 Nov 2007; Hanno Boeck <hanno@gentoo.org> +josm-1.5_p457.ebuild:
  Version bump.

*josm-1.5_p352 (09 Oct 2007)

  09 Oct 2007; Hanno Boeck <hanno@gentoo.org> files/josm,
  +josm-1.5_p352.ebuild:
  Version bump for API 0.5.

  08 Sep 2007; Hanno Boeck <hanno@gentoo.org> ChangeLog:
  Add desktop file and icon.

*josm-1.5_p320 (06 Sep 2007)

  06 Sep 2007; Hanno Boeck <hanno@gentoo.org> +josm-1.5_p320.ebuild:
  Bump to snapshot version.

*josm-1.5 (06 Sep 2007)

  06 Sep 2007; Hanno Boeck <hanno@gentoo.org> +files/josm, +josm-1.5.ebuild:
  Initial commit of the Java OpenStreetMap Editor.
